# autonomousdriving

./: .gitignore  DATASET_ATTRIBUTION.md  README.md  docker-compose.yml  pyproject.toml
adas_stack/: __init__.py
adas_stack/common/: __init__.py  bdd100k_dataset.py  dataset_adapter.py  metrics.py  schemas.py  simulation.py  synthetic_tracking.py  tracking_dataset.py  vehicle_detection_dataset.py
adas_stack/evaluation/: __init__.py  perception_eval.py  prediction_eval.py
adas_stack/pipeline/: benchmark.py  clients.py  orchestrator.py  streaming.py
adas_stack/services/: __init__.py
adas_stack/services/perception_service/: app.py  core.py
adas_stack/services/prediction_service/: __init__.py  app.py  core.py
adas_stack/services/risk_service/: app.py  core.py
adas_stack/training/: __init__.py  perception_train.py  prediction_train.py
adas_stack/workflows/: __init__.py  bootstrap_stack.py
docker/: orchestrator.Dockerfile  perception.Dockerfile  prediction.Dockerfile  risk.Dockerfile
tests/: test_pipeline.py
